--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,21 @@
-# YAML config file for E155 github website
-
-
-
+# Configuration Options
 theme: jekyll-theme-minimal
 title: Snake through 32x24 1-bit color resolution VGA graphics card
-Description: This is the documentation for Kaitlin Lucio and Diego Herrera Vicioso's final project in E155. This page is broken into three subpages, FPGA, MCU, and schematics. Look below for a very normal edit :) 
+Description: This is the documentation for Kaitlin Lucio and Diego Herrera Vicioso's final project in E155. This page is broken into three subpages, FPGA, MCU, and schematics. Enjoy!
+
+header-pages:
+  - documentation.html
+  - resources.html
+
+
+# Github Pages settings that cannot be changed
+# lsi: false
+# safe: true
+# source: [your repo's top level directory]
+# incremental: false
+# highlighter: rouge
+# gist:
+#   noscript: false
+# kramdown:
+#   math_engine: mathjax
+#   syntax_highlighter: rouge
