--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Configuration Options
-theme: jekyll-theme-minimal
+theme: minimal
 title: Snake through 32x24 1-bit color resolution VGA graphics card
 Description: This is the documentation for Kaitlin Lucio and Diego Herrera Vicioso's final project in E155. This page is broken into three subpages, FPGA, MCU, and schematics. Enjoy!
 
