added schematic and block diagram

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,8 @@
 # Configuration Options
 theme: minima
-title: Snake through 32x24 1-bit color resolution VGA graphics card
-description: "This is the documentation for Kaitlin Lucio and Diego Herrera Vicioso's final project in E155. This page is broken into three subpages, FPGA, MCU, and schematics. Enjoy!"
+title: Snake on VGA
+author: "Kaitlin Lucio, Diego Herrera Vicioso"
+description: ""
 
 header-pages:
   - documentation.html
